# revelation-bible

./: .env.license  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  loader.rs  reading_plan.rs  repository.rs  search.rs
src/domain/: book.rs  chapter.rs  mod.rs  pericope.rs  reading.rs  search.rs  verse.rs
src/ports/: mod.rs  reading.rs  repository.rs  search.rs
src/user_data/: bookmark.rs  highlight.rs  mod.rs  note.rs  reading_progress.rs
