[package]
name = "revelation-bible"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bible-cli"
path = "src/bin/cli.rs"

[dependencies]
revelation-shared = { git = "https://github.com/Revelation-Path/revelation-shared.git", features = ["db", "backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
masterror = "0.26"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
