# SPDX-FileCopyrightText: 2025 Revelation Team
#
# SPDX-License-Identifier: MIT

[package]
name = "revelation-bible"
version = "0.1.0"
edition = "2024"
authors = ["Revelation Team"]
description = "Bible domain for Revelation project"
license = "MIT"
repository = "https://github.com/Revelation-Path/revelation-bible"
readme = "README.md"
keywords = ["revelation", "bible", "domain"]
categories = ["data-structures"]

[features]
default = []
db = ["dep:sqlx"]
backend = ["dep:masterror"]
api = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres"], optional = true }
masterror = { version = "0.26", features = ["sqlx"], optional = true }
utoipa = { version = "5", features = ["uuid", "chrono"], optional = true }
